--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,6 +235,13 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -258,13 +265,6 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=StaticMeshEditor
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -339,36 +339,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
-MRUItem1=/Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1
-MRUItem2=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1
-MRUItem3=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
-MRUItem4=/Game/_Core/_Enemies/Kronen_Female/Kronen_Model_02
-MRUItem5=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
-MRUItem6=/Game/_Core/_Enemies/Kronen_Female/Kronen_Fem1
-MRUItem7=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Death1
-MRUItem8=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
-MRUItem9=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
-MRUItem10=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
-MRUItem11=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
-MRUItem12=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
-MRUItem13=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model_Skeleton
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat
-MRUItem15=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_M
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
-MRUItem18=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall2
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts_Textures
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts
-MRUItem23=/Game/_Level/_LevelAssets/_Props/Bodies/Leg_Part
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Texture
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse2_Mat
-MRUItem26=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown1
-MRUItem27=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp2
-MRUItem28=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayDown2
-MRUItem29=/Game/_Level/_LevelAssets/_Props/Bodies/Corpse_LayUp1
+MRUItem0=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
+MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
+MRUItem2=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
+MRUItem3=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Idle1
+MRUItem4=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Death1
+MRUItem5=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1
+MRUItem6=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger
+MRUItem7=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem8=/Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1
+MRUItem9=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1
+MRUItem10=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
+MRUItem11=/Game/_Core/_Enemies/Kronen_Female/Kronen_Model_02
+MRUItem12=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
+MRUItem13=/Game/_Core/_Enemies/Kronen_Female/Kronen_Fem1
+MRUItem14=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Death1
+MRUItem15=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
+MRUItem16=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
+MRUItem17=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
+MRUItem18=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem19=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
+MRUItem20=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model_Skeleton
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat
+MRUItem22=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_M
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
+MRUItem25=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall2
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts_Textures
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1770,6 +1770,11 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1.KronenFemale_Animations_Idle1=1
 /Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1.Kronen_Animations_Death1=1
 /Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1=1
+/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger.The_Slugger=1
+/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1.TheSlugger_Animations_Attack1=1
+/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Death1.TheSlugger_Animations_Death1=1
+/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Idle1.TheSlugger_Animations_Idle1=1
+/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1.TheSlugger_Animations_Walk1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1824,7 +1829,7 @@ GraphEditorQuickJumps=()
 [DetailPropertyExpansion]
 InputAction=
 DataAsset="\"Object.SkeletalMeshes\" "
-Object="\"Object.SkeletalMeshes\" "
+Object=
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[22].Modifiers\" \"Object.Mappings.Mappings.Mappings[22].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[23].Modifiers\" \"Object.Mappings.Mappings.Mappings[23].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[24].Modifiers\" \"Object.Mappings.Mappings.Mappings[24].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[25]\" \"Object.Mappings.Mappings.Mappings[25].Modifiers\" \"Object.Mappings.Mappings.Mappings[25].Modifiers.Modifiers[0]\" \"Object.Mappings.Mappings.Mappings[26]\" \"Object.Mappings.Mappings.Mappings[26].Modifiers\" \"Object.Mappings.Mappings.Mappings[26].Modifiers.Modifiers[0]\" "
 CharacterMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 PawnMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
@@ -2989,6 +2994,7 @@ PreserveScaleRatio=True
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
+bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
