Knive animation with anti spam

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,13 +175,13 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
-SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-CapsuleComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup
+CapsuleComponent=
 Character=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-K2Node_CallFunction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+K2Node_CallFunction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 StaticMeshActor=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_Slugger_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_Bulky_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
@@ -202,8 +202,8 @@ EdGraphNode_Comment=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 K2Node_MacroInstance=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 PropertyWrapper=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 K2Node_VariableSet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
-K2Node=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-K2Node_Tunnel=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+K2Node=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
+K2Node_Tunnel=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 CameraComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 K2Node_EnhancedInputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 EdGraph=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
@@ -233,8 +233,9 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=AnimationEditor
@@ -264,7 +265,8 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
+OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
+OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -339,36 +341,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
-MRUItem1=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
-MRUItem2=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
-MRUItem3=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Idle1
-MRUItem4=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Death1
-MRUItem5=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1
-MRUItem6=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger
-MRUItem7=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
-MRUItem8=/Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1
-MRUItem9=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1
-MRUItem10=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
-MRUItem11=/Game/_Core/_Enemies/Kronen_Female/Kronen_Model_02
-MRUItem12=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
-MRUItem13=/Game/_Core/_Enemies/Kronen_Female/Kronen_Fem1
-MRUItem14=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Death1
-MRUItem15=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
-MRUItem16=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
-MRUItem17=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
-MRUItem18=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
-MRUItem19=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
-MRUItem20=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model_Skeleton
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat
-MRUItem22=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
-MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_M
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
-MRUItem25=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall2
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts_Textures
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Corpse_Parts
+MRUItem0=/Game/_Core/_Player/DI_Player
+MRUItem1=/Game/_Core/_Player/IF_Character
+MRUItem2=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
+MRUItem3=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
+MRUItem4=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
+MRUItem5=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Idle1
+MRUItem6=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Death1
+MRUItem7=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1
+MRUItem8=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger
+MRUItem9=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem10=/Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1
+MRUItem11=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1
+MRUItem12=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1
+MRUItem13=/Game/_Core/_Enemies/Kronen_Female/Kronen_Model_02
+MRUItem14=/Game/_Core/_Enemies/Kronen_Female/Kronen_Textures_01_WIP3
+MRUItem15=/Game/_Core/_Enemies/Kronen_Female/Kronen_Fem1
+MRUItem16=/Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Death1
+MRUItem17=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Death1
+MRUItem18=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Attack1_Armature_M_004_Armature_M_005Action_001
+MRUItem19=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Walk1
+MRUItem20=/Game/_Core/_Enemies/Kronen_Fast/KronenFast_Animations_Idle1
+MRUItem21=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model
+MRUItem22=/Game/_Core/_Enemies/Kronen_Fast/Kronen_Fast_Model_Skeleton
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Media_Center_Wood_Mat
+MRUItem24=/Game/_Level/_LevelAssets/_OGFiles/DustyWood_M
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Shoe_Rack_M
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
+MRUItem27=/Game/_Level/_LevelAssets/_Props/Bodies/Head_Part
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall2
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Furniture/Coat_Hanger_Wall1
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1544,6 +1546,7 @@ BoneProxy.Bone=True
 BoneProxy.Transforms=True
 ClothingAssetCommon.Config=True
 ClothingAssetCommon.Import=True
+DI_Player_C.Weapon Info =True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Core/_Enemies/Kronen_Male/Kronen_Model_01.Kronen_Model_01;
@@ -1835,12 +1838,12 @@ CharacterMovementComponent="\"Object.Character Movement: Gravity.GravityDirectio
 PawnMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 NavMovementComponent="\"Object.Character Movement: Gravity.GravityDirection\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 MovementComponent="\"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintNormal\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
-ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
 SkeletalMeshComponent=
 SkinnedMeshComponent=
-MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
 CapsuleComponent=
 ShapeComponent=
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
