--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,11 +174,11 @@ MRUItem0=/Game/_Level/Island
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
-DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+DI_Player_C=
 SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform
 BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+BP_Kronen_C=
 CapsuleComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 Character=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 K2Node_CallFunction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
@@ -239,8 +239,9 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
@@ -267,7 +268,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -322,7 +322,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.535812318
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe
+ContentBrowserTab1.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1672,20 +1672,20 @@ RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_90s_StylePack/Objects/Plant.Pla
 DeleteConfirmationVariable_Warning=False
 
 [AssetEditorToolkitTabLocation]
-/Game/_Core/_Player/IF_Character.IF_Character=0
+/Game/_Core/_Player/IF_Character.IF_Character=1
 /Game/_Core/_Weapons/Rifle.Rifle=1
 /Game/_Core/_Weapons/Axe.Axe=1
-/Game/_Core/_Weapons/Shotgun.Shotgun=1
+/Game/_Core/_Weapons/Shotgun.Shotgun=0
 /Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect=1
 /Game/_Core/_Player/_Inputs/_IMP/AllMayorKeyInputs.AllMayorKeyInputs=1
 /Game/_Core/_Player/DI_Player.DI_Player=0
-/Game/_Core/_Enemies/BP_Kronen.BP_Kronen=1
+/Game/_Core/_Enemies/BP_Kronen.BP_Kronen=0
 /Game/_Core/_Enemies/BP_KronenFast.BP_KronenFast=1
 /Game/_Core/_Enemies/BP_KronenFemale.BP_KronenFemale=1
 /Game/_Level/_LevelAssets/_Environment_Assets/Ferry/ferry.ferry=1
 /Game/_Level/_LevelAssets/_Environment_Assets/Ferry/Ferry_BP.Ferry_BP=1
-/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy.BHT_Enemy=1
-/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy.BB_Enemy=1
+/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy.BHT_Enemy=0
+/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy.BB_Enemy=0
 /Game/_Core/_Enemies/_Charger/Brain/task/BTTASK_ROAM.BTTASK_ROAM=1
 /Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main.Enemy_CTR_Main=1
 /Game/_Core/_Enemies/BP_Charger.BP_Charger=1
@@ -1870,7 +1870,7 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Walk1.KronenFemale_Animations_Walk1=1
 /Game/_Core/_Enemies/Kronen_Female/KronenFemale_Animations_Idle1.KronenFemale_Animations_Idle1=1
 /Game/_Core/_Enemies/Kronen_Male/Kronen_Animations_Death1.Kronen_Animations_Death1=1
-/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1=1
+/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1=0
 /Game/_Core/_Enemies/Slugger_Enemy/The_Slugger.The_Slugger=1
 /Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Attack1.TheSlugger_Animations_Attack1=1
 /Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Death1.TheSlugger_Animations_Death1=1
@@ -1881,6 +1881,14 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_25_DM.Carp_Injured_25_DM=0
 /Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_75_DM.Carp_Injured_75_DM=0
 /Game/_Core/_Player/_Assets/_Textures/_Meterials/Test.Test=0
+/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP.Carp_AnimBP=0
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Reload_Anim.Carpenter_Rifle_Reload_Anim=0
+/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive=0
+/Game/_Core/_Enemies/_Animations/ABP_KrononSlow.ABP_KrononSlow=0
+/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif.AttackNotif=0
+/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM.Carp_DM=0
+/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M.Carp_M=0
+/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_50_DM.Carp_Injured_50_DM=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1972,7 +1980,7 @@ Texture2D.LevelOfDetail=False
 StaticMesh.LODCustomMode=False
 
 [RootWindow]
-ScreenPosition=X=105.000 Y=0.000
+ScreenPosition=X=144.000 Y=19.000
 WindowSize=X=1280.000 Y=717.000
 InitiallyMaximized=True
 
@@ -1990,7 +1998,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/EmperorMinilla/Desktop/Deep Infection/The_Influence/DeepInfection/Content/_Level
+UNR=../../../../Projects/The_Influence/DeepInfection/Content/_Level
 BRUSH=../../../../Projects/The_Influence/DeepInfection/Content/
 FBX=../../../../Projects/The_Influence/DeepInfection/Content/
 FBXAnim=../../../../Projects/The_Influence/DeepInfection/Content/
@@ -3089,8 +3097,8 @@ DataTableEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/Unreal engines/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [SelectionDetails]
@@ -3100,7 +3108,6 @@ PreserveScaleRatio=True
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 bRealtimeMaterialViewport=False
-bShowGrid=False
 
 [FBX_Export_UI_Option_FbxExportOption]
 FbxExportCompatibility=FBX_2013
@@ -3446,6 +3453,8 @@ Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3463,4 +3472,7 @@ InstalledPlugins=WMFCodecs
 bShowGrid=True
 bDrawGrid=False
 PrimType=1
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
